Minor padding and alignment fixes for images

--- a/app/assets/stylesheets/purl_image.css
+++ b/app/assets/stylesheets/purl_image.css
@@ -433,13 +433,13 @@ a.item-header:hover {
 }
 
 #img-canvas {
-  margin: 10px;
+  margin: 0 10px;
 }
 
 #zpr-frame {
 	left: 10px;
 	position: absolute;
-	top: 10px;
+	/*top: 10px;*/
 }
 
 #img-viewer-pagination {
